--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "string": "cpp"
+        "string": "cpp",
+        "type_traits": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
